--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
 		<noscript>You need to enable JavaScript to run this app.</noscript>
 		<div id="root"></div>
 		<script type="module" src="/src/main.tsx"></script>
-		<script src="https://unpkg.com/tapcart-codeblocks-sdk-test"></script>
+		<!-- <script src="https://unpkg.com/tapcart-codeblocks-sdk-test"></script> -->
 	</body>
 </html>
